--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <thead>
           <tr>
             <th>s.no</th>
+            <th>logo</th>
             <th>name of coin</th>
+
           </tr>
         </thead>
         <tbody id="table2"></tbody>
